--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- This is where all the jobs are displayed -->
+
 {% extends 'base.html' %}
 
 {% block content %}
@@ -5,17 +7,13 @@
     <div class="content">
         {% for job in jobs %}
             <div class="job">
-                <p><b>#{{ job.id }}</b></p>
-                <b>
-                    <p class="name">
-                        <a href="{{ url_for('job', job_id=job.id)}}">
-                            {{ job.department }}
-                        </a>
-                    </p>
-                    <p class="department">{{ job.department }}</p>
-                </b>
-                <p>{{ job.job_title }}</p>
-            </div>
+            <p><b>#{{ job.id }}</b></p>
+            <p><b>{{ job.department }}</b></p>
+            <p>{{ job.job_title }}</p>
+            <p>
+                <a href="{{ url_for('job', job_id=job.id) }}">View Details</a>
+            </p>
+        </div>
         {% endfor %}
     </div>
 {% endblock %}
