Nav bar and database update

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="title">{% block title %} Jobs {% endblock %}</h1>
+    <h1 class="main-title">{% block title %} Jobs {% endblock %}</h1>
     <div class="content">
         {% for job in jobs %}
             <div class="job">
