--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,42 @@
+/* Nav bar */
+
+nav {
+    list-style-type: none;
+    overflow: hidden;
+    background-color: #333;
+}
+
+nav a {
+    float: left;
+    display: block;
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #1A9287;
+}
+
+/* title */
+
+.main-title {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Job container */
+
+.job {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
 
 /* Actual timesheet */
-body {
+
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -9,9 +45,11 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #f4f4f4;
-}
+} */
 .container {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 140px;
 }
 .week-container {
     display: flex;
@@ -31,6 +69,23 @@ body {
 .input-container label {
     font-size: 15px;
     margin-right: 10px;
+}
+
+/* two_months worked box */
+
+.two_months_entry_box {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+}
+.two_months_entry_box input {
+    font-size: 15px;
+    padding: 10px;
+    width: 150px;
+}
+.two_months_entry_box label {
+    font-size: 15px;
+    margin-left: 490px;
 }
 
 /* button */
