--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %} - FlaskApp</title>
         <!-- Links to an external CSS stylesheet located in the 'static' folder -->
+             <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <style>
         .title {
             margin: 5px;
@@ -12,6 +13,7 @@
         .content {
             margin: 5px;
             width: 100%;
+            height: 100%;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
@@ -24,18 +26,11 @@
             background-color: #f3f3f3;
             inline-size: 100%;
         }
-
-        nav a {
-            color: #d64161;
-            font-size: 3em;
-            margin-left: 50px;
-            text-decoration: none;
-        }
     </style>
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('index') }}">My Jobs</a>
         <a href="#">Create</a>
     </nav>
     <hr>
