--- a/templates/user_portal.html
+++ b/templates/user_portal.html
@@ -64,7 +64,7 @@
                     <input type="number" id="week_five_hrs" name="week_hours_five">
                 </div>
             </div>
-            <div class="input-container">
+            <div class="two_months_entry_box">
                 <label for="two_months">Two Months Worked:</label>
                 <input type="text" id="two_months" name="dui_mash">
             </div>
