--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="content">
         {% for job in jobs %}
             <div class="job">
-            <p><b>#{{ job.id }}</b></p>
+            <!-- <p><b>#{{ job.id }}</b></p> -->
             <p><b>{{ job.department }}</b></p>
             <p>{{ job.job_title }}</p>
             <p>
