--- a/templates/job.html
+++ b/templates/job.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="content">
             <div class="job">
-                <p><b>#{{ job.id }}</b></p>
+                <!-- <p><b>#{{ job.id }}</b></p> -->
                 <b>
                     <p class="department">{{ job.department }}</p>
                 </b>
