--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 <body>
     <nav>
         <a href="{{ url_for('index') }}">My Jobs</a>
-        <a href="#">Create</a>
+        <!-- <a href="#">Create</a> -->
     </nav>
     <hr>
     <div class="content">
