Implemented user profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
 <body>
     <nav>
         <a href="{{ url_for('index') }}">My Jobs</a>
+        <a href="{{ url_for('profile') }}">My Profile</a>
         <!-- <a href="#">Create</a> -->
     </nav>
     <hr>
