--- a/static/styles.css
+++ b/static/styles.css
@@ -105,3 +105,11 @@ nav a:hover {
     background-color: #0056b3;
 }
 
+/* user profiles */
+
+.user-details {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin-top: 80px;
+}
+
